argo-events-playground-test/minio-s3-console-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: s3-console
spec:
  host: s3-console.apps.baloise.dev
  to:
    kind: Service
    name: myminio-console
    weight: 100
  port:
    targetPort: https-console
  tls:
    termination: reencrypt
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDXTCCAkWgAwIBAgIICIifCiM/2ZYwDQYJKoZIhvcNAQELBQAwUjFQME4GA1UE
[...]
      xw==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIDiTCCAnGgAwIBAgIIbTRQ1aW0cHgwDQYJKoZIhvcNAQELBQAwUjFQME4GA1UE
[...]
      -----END CERTIFICATE-----
  wildcardPolicy: None
