argo-events-playground-test/minio-s3-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: s3
spec:
  host: s3.apps.baloise.dev
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: https-minio
  tls:
    termination: reencrypt
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIDXTCCAkWgAwIBAgIICIifCiM/2ZYwDQYJKoZIhvcNAQELBQAwUjFQME4GA1UE
[...]
      xw==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIDiTCCAnGgAwIBAgIIbTRQ1aW0cHgwDQYJKoZIhvcNAQELBQAwUjFQME4GA1UE
[...]
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
